force-app/main/default/objects/Individual_Plan_Structure__c/Individual_Plan_Structure__c.object-meta.xml
<CustomObject>
    <description>The progress for an individual program enrollment.</description>
    <label>Individual Plan Structure</label>
    <nameField>
        <displayFormat>IPS-{00000}</displayFormat>
        <label>Individual Plan Structure #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Plan Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>