force-app/main/default/objects/Individual_Plan_Structure__c/fields/Allow_Pre_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Pre_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to allow enrollment without considering pre/corequisite required.</description>
    <label>Allow Pre-Enrollment?</label>
    <type>Checkbox</type>
</CustomField>