force-app/main/default/objects/Individual_Plan_Structure__c/fields/Alternate_Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use the alternate study unit for enrollment instead of the study unit defined in the study plan structure.</description>
    <label>Alternate Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Individual Plan Structures</relationshipLabel>
    <relationshipName>Individual_Plan_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>