force-app/main/default/objects/Individual_Plan_Structure__c/fields/Attempt_Limit__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Limit__c</fullName>
    <description>The maximum attempt allowed.</description>
    <inlineHelpText>The maximum attempt allowed.</inlineHelpText>
    <label>Attempt Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>