force-app/main/default/objects/Individual_Plan_Structure__c/fields/Attempt_Limit_Status__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Limit_Status__c</fullName>
    <description>Shows whether the student&apos;s number of enrollment attempts exceeds the limit.</description>
    <inlineHelpText>Shows whether the student&apos;s number of enrollment attempts exceeds the limit.</inlineHelpText>
    <label>Attempt Limit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below Limit</fullName>
            </value>
            <value>
                <fullName>At Limit</fullName>
            </value>
            <value>
                <fullName>Exceeded Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>