force-app/main/default/objects/Individual_Plan_Structure__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>Individual program enrollment&apos;s contact.</description>
    <formula>CASESAFEID( Individual_Program_Enrollment__r.Contact__c )</formula>
    <inlineHelpText>Individual program enrollment&apos;s contact.</inlineHelpText>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>