force-app/main/default/objects/Individual_Plan_Structure__c/fields/Credits_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Credits_Contribution__c</fullName>
    <description>Indicates that the credits earned for an individual plan structure unit is contributed to the group completion.</description>
    <inlineHelpText>Indicates that the credits earned for an individual plan structure unit is contributed to the group completion.</inlineHelpText>
    <label>Credits Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>