force-app/main/default/objects/Individual_Plan_Structure__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <label>Credits Earned</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>