force-app/main/default/objects/Individual_Plan_Structure__c/fields/Credits_equivalent_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Credits_equivalent_per_Unit__c</fullName>
    <label>Credits equivalent per Unit</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>