force-app/main/default/objects/Individual_Plan_Structure__c/fields/Hidden__c.field-meta.xml
<CustomField>
    <fullName>Hidden__c</fullName>
    <description>Used behind the scenes to determine if the record is hidden based on this record and its parent(s).</description>
    <formula>IF(Hide_in_Enrollment__c,
	true,
	IF(NOT(ISBLANK(Parent_Plan_Structure__c)) &amp;&amp; Parent_Plan_Structure__r.Hide_in_Enrollment__c,
		true,
		IF(NOT(ISBLANK(Parent_Plan_Structure__r.Parent_Plan_Structure__c)) &amp;&amp; Parent_Plan_Structure__r.Parent_Plan_Structure__r.Hide_in_Enrollment__c,
			true,
			IF(NOT(ISBLANK(Parent_Plan_Structure__r.Parent_Plan_Structure__r.Parent_Plan_Structure__c)) &amp;&amp; Parent_Plan_Structure__r.Parent_Plan_Structure__r.Parent_Plan_Structure__r.Hide_in_Enrollment__c,
				true,
				false
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used behind the scenes to determine if the record is hidden based on this record and its parent(s).</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>