force-app/main/default/objects/Individual_Plan_Structure__c/fields/Hide_in_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Hide_in_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the group or unit in the enrollment wizard.</description>
    <inlineHelpText>Hide the group or unit in the enrollment wizard.</inlineHelpText>
    <label>Hide in Enrollment</label>
    <type>Checkbox</type>
</CustomField>