force-app/main/default/objects/Individual_Plan_Structure__c/fields/Individual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Enrollment</label>
    <referenceTo>Individual_Enrollment__c</referenceTo>
    <relationshipLabel>Individual Plan Units</relationshipLabel>
    <relationshipName>Individual_Plan_Units</relationshipName>
    <type>Lookup</type>
</CustomField>