force-app/main/default/objects/Individual_Plan_Structure__c/fields/Individual_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Program Enrollment</label>
    <referenceTo>Individual_Program_Enrollment__c</referenceTo>
    <relationshipLabel>Individual Plan Structures</relationshipLabel>
    <relationshipName>Individual_Plan_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>