force-app/main/default/objects/Individual_Plan_Structure__c/fields/Max_Credits__c.field-meta.xml
<CustomField>
    <fullName>Max_Credits__c</fullName>
    <label>Max Credits</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>