force-app/main/default/objects/Individual_Plan_Structure__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents a Primary discipline unit.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>