force-app/main/default/objects/Individual_Plan_Structure__c/fields/Required_Children_Completed__c.field-meta.xml
<CustomField>
    <fullName>Required_Children_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically checked when all required child IPS records have been completed.</description>
    <inlineHelpText>This field is automatically checked when all required child IPS records have been completed.</inlineHelpText>
    <label>Required Children Completed</label>
    <type>Checkbox</type>
</CustomField>