force-app/main/default/objects/Individual_Plan_Structure__c/fields/Requirement_Logic__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Logic__c</fullName>
    <formula>IF(
	ISBLANK( Alternate_Study_Unit__c ),
	IF(ISBLANK(Study_Plan_Structure__r.Requirement_Logic__c), Study_Plan_Structure__r.Study_Unit__r.Requirement_Logic__c, Study_Plan_Structure__r.Requirement_Logic__c),
	Alternate_Study_Unit__r.Requirement_Logic__c 
)</formula>
    <label>Requirement Logic</label>
    <type>Text</type>
</CustomField>