force-app/main/default/objects/Individual_Plan_Structure__c/fields/Requirement_Met__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Met__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Track the status of student unit requirement</description>
    <label>Requirement Met</label>
    <type>Checkbox</type>
</CustomField>