force-app/main/default/objects/Individual_Plan_Structure__c/fields/Revalidate_Completion__c.field-meta.xml
<CustomField>
    <fullName>Revalidate_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revalidate Completion</label>
    <type>Checkbox</type>
</CustomField>