force-app/main/default/objects/Individual_Plan_Structure__c/fields/Study_Plan_Structure__c.field-meta.xml
<CustomField>
    <fullName>Study_Plan_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Plan Structure</label>
    <referenceTo>Study_Plan_Structure__c</referenceTo>
    <relationshipLabel>Individual Plan Structures</relationshipLabel>
    <relationshipName>Individual_Plan_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>