force-app/main/default/objects/Individual_Plan_Structure__c/fields/Target_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Unit_Id__c</fullName>
    <formula>IF(ISBLANK( Alternate_Study_Unit__c ), CASESAFEID(Study_Plan_Structure__r.Study_Unit__c) , CASESAFEID(Alternate_Study_Unit__c))</formula>
    <label>Target Unit Id</label>
    <type>Text</type>
</CustomField>