force-app/main/default/objects/Individual_Plan_Structure__c/fields/Units_Contributed__c.field-meta.xml
<CustomField>
    <fullName>Units_Contributed__c</fullName>
    <label># of Units Contributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>