force-app/main/default/objects/Individual_Plan_Structure__c/fields/Units_Passed__c.field-meta.xml
<CustomField>
    <fullName>Units_Passed__c</fullName>
    <label># of Units Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>