force-app/main/default/objects/Individual_Plan_Structure__c/recordTypes/Unit.recordType-meta.xml
<RecordType>
    <fullName>Unit</fullName>
    <active>true</active>
    <label>Unit</label>
</RecordType>