force-app/main/default/objects/Individual_Plan_Structure__c/validationRules/Required_Individual_Program_Enrollment.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Individual_Program_Enrollment</fullName>
    <active>true</active>
    <description>To ensure that all individual plan structure is linked to a individual program enrollment.</description>
    <errorConditionFormula>ISBLANK(Individual_Program_Enrollment__c)</errorConditionFormula>
    <errorDisplayField>Individual_Program_Enrollment__c</errorDisplayField>
    <errorMessage>The individual program enrollment is required.</errorMessage>
</ValidationRule>