force-app/main/default/objects/Individual_Plan_Structure__c/validationRules/Validate_Requirement_Met_For_Linked_IEN.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Requirement_Met_For_Linked_IEN</fullName>
    <active>true</active>
    <description>Validate if the requirement is met when the IEN field is populated</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;In Progress&apos;) || ISPICKVAL(Status__c, &apos;Completed&apos;),
    Allow_Pre_Enrollment__c = FALSE,
    NOT(ISBLANK(Individual_Enrollment__c)), 
    Requirement_Met__c = FALSE, 
    Individual_Enrollment__r.Bypass_Requirement_Met__c = FALSE
)</errorConditionFormula>
    <errorMessage>Individual Enrollment requirement not met.</errorMessage>
</ValidationRule>